@@ -16,10 +16,14 @@
 #include "avrftdi_private.h"
 
 #ifdef HAVE_LIBUSB_1_0
-#ifdef HAVE_LIBFTDI1
+#if defined(HAVE_LIBFTDI1) || defined(HAVE_LIBFTDI)
 
 #include <libusb-1.0/libusb.h>
+#ifdef HAVE_LIBFTDI1
 #include <libftdi1/ftdi.h>
+#elif HAVE_LIBFTDI
+#include <ftdi.h>
+#endif
 
 static void avrftdi_tpi_disable(PROGRAMMER *);
 static int avrftdi_tpi_program_enable(PROGRAMMER * pgm, AVRPART * p);
