@@ -144,24 +144,25 @@ if test x$have_libusb_1_0 = xyes; then
    AC_CHECK_HEADERS([libusb.h])
 fi
 AC_SUBST(LIBUSB_1_0, $LIBUSB_1_0)
+AH_TEMPLATE([HAVE_LIBFTDI1],
+            [Define if FTDI support is enabled via libftdi1])
 AH_TEMPLATE([HAVE_LIBFTDI],
             [Define if FTDI support is enabled via libftdi])
 AH_TEMPLATE([HAVE_LIBFTDI_TYPE_232H],
             [Define if libftdi supports FT232H, libftdi version >= 0.20])
-AC_CHECK_LIB([ftdi], [ftdi_usb_get_strings], [have_libftdi=yes], [], [-lusb])
-if test x$have_libftdi = xyes; then
-   LIBFTDI="-lftdi -lusb"
-   AC_DEFINE([HAVE_LIBFTDI])
-fi
-AC_SUBST(LIBFTDI, $LIBFTDI)
-AH_TEMPLATE([HAVE_LIBFTDI1],
-            [Define if FTDI support is enabled via libftdi1])
 AC_CHECK_LIB([ftdi1], [ftdi_new], [have_libftdi1=yes], [], [-lusb-1.0])
+AC_CHECK_LIB([ftdi], [ftdi_usb_get_strings], [have_libftdi=yes], [], [-lusb])
 if test x$have_libftdi1 = xyes; then
-	LIBFTDI1="-lftdi1"
-	AC_DEFINE([HAVE_LIBFTDI1])
+   LIBFTDI1="-lftdi1"
+   AC_DEFINE([HAVE_LIBFTDI1])
+   AC_SUBST(LIBFTDI1, $LIBFTDI1)
+else
+   if test x$have_libftdi = xyes; then
+      LIBFTDI="-lftdi -lusb"
+      AC_DEFINE([HAVE_LIBFTDI])
+      AC_SUBST(LIBFTDI, $LIBFTDI)
+   fi
 fi
-AC_SUBST(LIBFTDI1, $LIBFTDI1)
 AC_CHECK_HEADERS([pthread.h])
 # as there exits header file only pthread implementations for Windows, check if we have a library
 AC_CHECK_LIB([pthread], [pthread_create], [have_pthread=yes])
@@ -486,16 +487,20 @@ else
    echo "DON'T HAVE libusb_1_0"
 fi
 
-if test x$have_libftdi = xyes; then
-   echo "DO HAVE    libftdi"
-else
-   echo "DON'T HAVE libftdi"
-fi
-
 if test x$have_libftdi1 = xyes; then
    echo "DO HAVE    libftdi1"
 else
    echo "DON'T HAVE libftdi1"
+fi
+
+if test x$have_libftdi = xyes; then
+   if test x$have_libftdi1 = xyes; then
+       echo "DO HAVE    libftdi (but prefer to use libftdi1)"
+   else
+       echo "DO HAVE    libftdi"
+   fi
+else
+   echo "DON'T HAVE libftdi"
 fi
 
 if test x$have_libhid = xyes; then
